# kunft-erc20-token

./: .env.example  Makefile  package.json
contract/: Cargo.toml
contract/src/: constants.rs  entry_points.rs  main.rs
src/: client.ts  install.ts  mint.ts  utils.ts
utils/test-env/src/: test_contract.rs  test_env.rs  utils.rs
