[package]
name = "kunft-token"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = {path = "../utils/contract-utils"}
hex = { version = "0.4.3", default-features = false }
once_cell = { version = "1.8.0", default-features = false }
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
[[bin]]
name = "kunft"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

